# permutation

./: CMakeLists.txt
src/: neu_kombination.cpp  permutation.cpp
